--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,12 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '25.4.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
 }
